--- a/scss/component/_cart.scss
+++ b/scss/component/_cart.scss
@@ -1,10 +1,36 @@
-.cart{
+.cart {
   // background-color: rgba($color-white, .8);
-  background-color: #000;
-  height:  50rem;
-  transition: all .8s;
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
 
-  &:hover{
+  .cart__side {
+    height: 50rem;
+    transition: all .8s;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+
+    &--front {
+      background-color: red;
+      transform: rotateY(0deg);
+    }
+
+    &--back {
+      background-color: blue;
+      transform: rotateY(-180deg);
+    }
+
+  }
+
+
+  &:hover &__side--front {
     transform: rotateY(180deg);
+  }
+
+  &:hover &__side--back {
+    transform: rotateY(0deg);
   }
 }
